--- a/index1.html
+++ b/index1.html
@@ -28,11 +28,62 @@
 </div> -->
 
 
-<div style="animation: bounce 1s ease-in-out infinite; font-size: 2em;">
-<style>
-@keyframes bounce {
-  0%, 100% { transform: translateY(0); }
-  50% { transform: translateY(-20px); }
-}
-</style>Welcome!
-</div>
+<!-- <div style="animation: bounce 1s ease-in-out infinite; font-size: 2em;">
+    <style>
+        @keyframes bounce {
+
+            0%,
+            100% {
+                transform: translateY(0);
+            }
+
+            50% {
+                transform: translateY(-20px);
+            }
+        }
+    </style>Welcome!
+</div> -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+       
+
+        @keyframes count {
+            0% {
+                opacity: 1;
+                transform: scale(1);
+            }
+
+            33% {
+                opacity: 1;
+                transform: scale(1);
+            }
+
+            66% {
+                opacity: 1;
+                transform: scale(1);
+            }
+
+            100% {
+                opacity: 0;
+                transform: scale(0);
+            }
+        }
+    </style>
+</head>
+
+<body>
+    <div style="display:flex;justify-content:center;align-items:center;height:100vh;width:100vw;">
+        <div style="font-size:20vw;color:rgb(0, 0, 0);animation:count 3s steps(3) forwards;">
+            <span>321</span>
+        </div>
+    </div>
+
+</body>
+
+</html>
