--- a/index.html
+++ b/index.html
@@ -1,29 +1,94 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Motion Graphics - Proof of Concept</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-
     <div class="container">
         <h1>AI Motion Graphics POC</h1>
         <p>Type a command and click "Generate" to see the magic.</p>
-
+        
         <div class="controls">
-            <input type="text" id="command-input" placeholder="Try">
+            <input type="text" id="command-input" placeholder="e.g., A bouncing 'Welcome!' sign">
             <button id="generate-btn">Generate</button>
         </div>
 
         <div id="preview-screen">
+            </div>
+
+        <div id="edit-panel" style="display: none;">
+            <h2>Edit Your Animation</h2>
+            <div class="edit-controls">
+                <div class="control-group">
+                    <label for="color-picker">Text Color:</label>
+                    <input type="color" id="color-picker" value="#ffffff">
+                </div>
+                <div class="control-group">
+                    <label for="duration-slider">Animation Speed (seconds):</label>
+                    <input type="range" id="duration-slider" min="0.5" max="10" step="0.1" value="2">
+                    <span id="duration-label">2s</span>
+                </div>
+                 <div class="control-group">
+                    <label for="font-size-slider">Font Size:</label>
+                    <input type="range" id="font-size-slider" min="1" max="10" step="0.2" value="4">
+                    <span id="font-size-label">4em</span>
+                </div>
+            </div>
         </div>
     </div>
 
     <script src="script.js"></script>
 </body>
+</html> -->
 
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AI Motion Graphics - Proof of Concept</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+    <div class="container">
+        <h1>AI Motion Graphics POC</h1>
+        <p>Type a command and click "Generate" to see the magic.</p>
+        
+        <div class="controls">
+            <input type="file" id="image-uploader" accept="image/*">
+            <input type="text" id="command-input" placeholder="e.g., Make the image bounce">
+            <button id="generate-btn">Generate</button>
+        </div>
+
+        <div id="preview-screen">
+            </div>
+
+        <div id="edit-panel" style="display: none;">
+            <h2>Edit Your Animation</h2>
+            <div class="edit-controls">
+                <div class="control-group">
+                    <label for="color-picker">Text Color:</label>
+                    <input type="color" id="color-picker" value="#ffffff">
+                </div>
+                <div class="control-group">
+                    <label for="duration-slider">Animation Speed (seconds):</label>
+                    <input type="range" id="duration-slider" min="0.5" max="10" step="0.1" value="2">
+                    <span id="duration-label">2s</span>
+                </div>
+                 <div class="control-group">
+                    <label for="font-size-slider">Font Size:</label>
+                    <input type="range" id="font-size-slider" min="1" max="10" step="0.2" value="4">
+                    <span id="font-size-label">4em</span>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
+</body>
 </html>
